# ctqc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  Todos.md  qasm_to_ctqc.py
be/: README.md  benchmark.py  transpiler.py
be/ketgpt_benchmarks/: generate.sh
be/results/: generate_tex_table.py  requirements.txt
be/simulators/: ctqc.py  quokka_sharp.py
be/tools/: logger.py
benchmarks/: .gitignore  README.md  benchmark.py  combine_results.py  config.py  generate_tex_table.py  heatmaps.py  reproduce.sh  requirements.txt  run.sh  setup.sh  utils.py
benchmarks/floating_point_error/: example.sh  generate_qasm.py
benchmarks/ketgpt_benchmarks/: README.md  generate.sh
benchmarks/mqt_benchmarks/: generate.py  generate_ctqc_file.py  get_pyzx_optimized_benchmarks.sh  get_qiskit_optimized_benchmarks.sh  introduce_errors.py  requirements.txt  sort_erroneous_files.sh  transpile.sh  unpack_transp_tars.sh
benchmarks/mqt_circuits/: generate_mqt_circuits.py  optimize_with_pyzx.py  requirements.txt
benchmarks/quokka_sharp_benchmarks/: README.md
benchmarks/results/: circuit_analysis.py  config.py  generate_tex_table.py  heatmaps.py  qubit_increase_plot.py  requirements.txt  utils.py
benchmarks/simulators/: ctqc.py  interface.py  qcec.py  qiskit.py  quokka_sharp.py  stim_interface.py  utils.py
benchmarks/tools/: utils.py
circuits/: bell_circuit.ctqc  example.ctqc  fp_error.py  random_circuit.py
doc/: circuit_file_format.md
src/: main.rs
src/benchmarks/: circuit_generator.py  ctqc_with_cirq.py  qasm_util.py  run_qasm.py  (+4 more)
test/: circuits.py
(+7579 files in other folders)
