[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitvec = "1"
ordered-float = "4.1.0"
clap = { version = "4.4.4", features = ["derive"] }
snafu = "0.7.5"
anyhow = "1.0.75"
