[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
lazy_static = "1.4.0"
bitvec = "1"
ordered-float = "4.1.0"
clap = { version = "4.4.4", features = ["derive"] }
snafu = "0.7.5"
anyhow = "1.0.75"
fxhash = "0.2.1"
rand = "0.8.5"
meval = "0.2"
regex = "1.10.2"
rayon = "1.8.0"
ahash = "0.8.7"
indicatif = "0.17.8"
