[package]
name = "ctqc"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
lazy_static = "1.4.0"
# We use a fork from https://github.com/ferrilab/bitvec
# where we fixed a small (but important for this project)
# bug: https://github.com/lucasallison/bitvec/commit/38a88bc50973fa9319c87c385b4f5e6ec4700e01
bitvec = { git = "https://github.com/lucasallison/bitvec" }
ordered-float = "4.1.0"
clap = { version = "4.4.4", features = ["derive"] }
snafu = "0.7.5"
anyhow = "1.0.75"
fxhash = "0.2.1"
rand = "0.8.5"
meval = "0.2"
regex = "1.10.2"
rayon = "1.8.0"
ahash = "0.8.7"
indicatif = "0.17.8"
log = "0.4.21"
